# db-agent-app

./: .env.copy  .gitignore  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_routing.py
agents/: README.md  __init__.py  base_agent.py  llm_client.py  model_switcher.py  rag_agent.py  schema_indexer.py  states.py  step_logger.py
agents/nodes/: __init__.py  context_retriever.py  corrector.py  executor.py  intent_detector.py  output_formatter.py  performance_guard.py  query_generator.py  schema_retriever.py  security_guard.py  validator.py
database/: connection.py  query_engine.py  seed.sql
database/sqllite3/: schema_embeddings.py  sql_generator.py  sqllite3_init_db.py  sqllite3_seed.sql
lancedb_rag/: __init__.py  embedding_handler.py  schema_indexer.py  vector_store.py
models/: __init__.py  embedding_model.py
services/visualization/: README.md  __init__.py  chart_detector.py  plotly_generator.py  service.py
simple_rag/: Readme.md  rag_logic.py
